# neo_bond

./: .gitignore  README.md  ethics.md  plan.md  pyproject.toml  requirements.txt
src/ai_crew/: AI software, algorithms to detect human emotions a.md  crew.py
src/ai_crew/config/: agents.yaml  tasks.yaml
src/ai_crew/facial_emotion_detection/: computer_vision_task_output.py  emotion_result.json
src/ai_crew/facial_emotion_detection/async-emotion-detector/: README.md  requirements.txt
src/ai_crew/nlp/: nlp.py
src/ai_crew/speech_to_text/: speech_to_text_output.py  speech_to_text_output.txt
src/be_and_intergration_crew/: apis_design.md  crew.py
src/be_and_intergration_crew/config/: agents.yaml  tasks.yaml
src/be_and_intergration_crew/fastapi_backend/: database.py  main.py  requirements.txt
src/be_and_intergration_crew/fastapi_backend/auth/: auth.py
src/be_and_intergration_crew/fastapi_backend/models/: __init__.py  ai.py  ai_instances.py  ai_responses.py  conversations.py  emotions.py  messages.py  mood_tracking.py  speech_inputs.py  user_ai_link.py  users.py
src/be_and_intergration_crew/fastapi_backend/routers/: ai_instances.py  ai_responses.py  bot.py  conversations.py  emotions.py  interactions.py  messages.py  mood_tracking.py  speech_inputs.py  users.py
src/be_and_intergration_crew/fastapi_backend/schemas/: __init__.py  ai_instances.py  ai_responses.py  auth.py  conversations.py  emotions.py  messages.py  mood_tracking.py  (+3 more)
src/fe_crew/: crew.py
src/fe_crew/config/: agents.yaml  tasks.yaml
src/neo_bond/: main.py
src/neo_bond/config/: agents.yaml
(+14 files in other folders)
